--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
-body{
-	font-family: sans-serif;
-	text-align: center;
-	padding: 2rem;
-}
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
